<resources>
    <string name="app_name">Voting App</string>
    <string name="title_txt">Simple Voting App</string>
    <string name="subject_prompt_txt">Enter the subject of the vote</string>
    <string name="option_1_txt">Option 1</string>
    <string name="option_2_txt">Option 2</string>
    <string name="add_option_btn">Add Option</string>
    <string name="checkboxes_switch_text">Checkboxes:</string>
    <string name="lan_choice_txt">LAN</string>
    <string name="local_choice_txt">Same Device</string>
    <string name="continue_button">Continue</string>
    <string name="voting_method_txt">Voting Method</string>
    <string name="voter_count_txt">Voter count</string>
    <string name="connect_to_lan_device">Connect to LAN device</string>
    <string name="start_vote_txt">Start Vote</string>
</resources>
