<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_txt"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textAppearance="@color/black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject_prompt_txt"
        android:id="@+id/vote_subject_txt"
        android:inputType="text" />
    <LinearLayout
        android:id="@+id/options_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/option_1_txt" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/option_2_txt" />

        <Button
            android:id="@+id/add_option_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_option_btn" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/checkboxes_switch_text"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/choices_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/lan_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lan_choice_txt" />

        <RadioButton
            android:id="@+id/local_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_choice_txt"
            android:layout_marginStart="24dp" />
    </RadioGroup>
    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button" />

</LinearLayout>